--- a/Explorations/SQLite/Querying/Querying.ipynb
+++ b/Explorations/SQLite/Querying/Querying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,50 +278,12 @@
     "    SELECT title FROM books WHERE publisher_id = (\n",
     "        SELECT id FROM publishers WHERE publisher = 'MacLehose Press'\n",
     "    )\"\"\", conn)\n",
-    "print(\"\\nBooks by MacLehose Press (Nested Query):\\n\", df_books_nested)\n"
+    "print(\"\\nBooks by MacLehose Press (Nested Query):\\n\", df_books_nested)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Ratings for 'In Memory of Memory':\n",
-      "       rating\n",
-      "0          3\n",
-      "1          4\n",
-      "2          4\n",
-      "3          4\n",
-      "4          3\n",
-      "...      ...\n",
-      "1549       4\n",
-      "1550       4\n",
-      "1551       4\n",
-      "1552       4\n",
-      "1553       4\n",
-      "\n",
-      "[1554 rows x 1 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Query 5: Find ratings for 'In Memory of Memory'\n",
-    "df_ratings = pd.read_sql(\"\"\"\n",
-    "    SELECT rating FROM ratings WHERE book_id = (\n",
-    "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
-    "    )\"\"\", conn)\n",
-    "print(\"\\nRatings for 'In Memory of Memory':\\n\", df_ratings)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,18 +298,24 @@
     }
    ],
    "source": [
+    "# # Query 5: Find ratings for 'In Memory of Memory'\n",
+    "# df_ratings = pd.read_sql(\"\"\"\n",
+    "#     SELECT rating FROM ratings WHERE book_id = (\n",
+    "#         SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
+    "#     )\"\"\", conn)\n",
+    "# print(\"\\nRatings for 'In Memory of Memory':\\n\", df_ratings)\n",
     "\n",
     "# Query 6: Find the average rating for 'In Memory of Memory'\n",
     "df_avg_rating = pd.read_sql(\"\"\"\n",
     "    SELECT AVG(rating) FROM ratings WHERE book_id = (\n",
     "        SELECT id FROM books WHERE title = 'In Memory of Memory'\n",
     "    )\"\"\", conn)\n",
-    "print(\"\\nAverage Rating for 'In Memory of Memory':\\n\", df_avg_rating)\n"
+    "print(\"\\nAverage Rating for 'In Memory of Memory':\\n\", df_avg_rating)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +330,7 @@
     }
    ],
    "source": [
+    "# one way then the other\n",
     "\n",
     "# Query 7: Find author of 'Flights'\n",
     "df_author = pd.read_sql(\"\"\"\n",
@@ -370,41 +339,21 @@
     "            SELECT id FROM books WHERE title = 'Flights'\n",
     "        )\n",
     "    )\"\"\", conn)\n",
-    "print(\"\\nAuthor of 'Flights':\\n\", df_author)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Books by Fernanda Melchor:\n",
-      "               title\n",
-      "0          Paradais\n",
-      "1  Hurricane Season\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"\\nAuthor of 'Flights':\\n\", df_author)\n",
     "\n",
-    "# Query 8: Find books by 'Fernanda Melchor'\n",
-    "df_books_melchor = pd.read_sql(\"\"\"\n",
-    "    SELECT title FROM books WHERE id IN (\n",
-    "        SELECT book_id FROM authored WHERE author_id = (\n",
-    "            SELECT id FROM authors WHERE name = 'Fernanda Melchor'\n",
-    "        )\n",
-    "    )\"\"\", conn)\n",
-    "print(\"\\nBooks by Fernanda Melchor:\\n\", df_books_melchor)\n"
+    "# # Query 8: Find books by 'Fernanda Melchor'\n",
+    "# df_books_melchor = pd.read_sql(\"\"\"\n",
+    "#     SELECT title FROM books WHERE id IN (\n",
+    "#         SELECT book_id FROM authored WHERE author_id = (\n",
+    "#             SELECT id FROM authors WHERE name = 'Fernanda Melchor'\n",
+    "#         )\n",
+    "#     )\"\"\", conn)\n",
+    "# print(\"\\nBooks by Fernanda Melchor:\\n\", df_books_melchor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -422,65 +371,18 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 9: Find books with 'love' in the title\n",
     "df_love_books = pd.read_sql(\"SELECT title FROM books WHERE title LIKE '%love%'\", conn)\n",
-    "print(\"\\nBooks with 'love' in title:\\n\", df_love_books)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Books starting with 'The':\n",
-      "                                       title\n",
-      "0     The Gospel According to the New World\n",
-      "1                        The Birthday Party\n",
-      "2                        The Book of Mother\n",
-      "3                        The Books of Jacob\n",
-      "4                       The War of the Poor\n",
-      "5             The Dangers of Smoking in Bed\n",
-      "6                             The Employees\n",
-      "7                            The Pear Field\n",
-      "8                          The Perfect Nine\n",
-      "9              The Adventures of China Iron\n",
-      "10                The Discomfort of Evening\n",
-      "11                          The Eighth Life\n",
-      "12  The Enlightenment of The Greengage Tree\n",
-      "13                        The Memory Police\n",
-      "14           The Other Name: Septology I-II\n",
-      "15               The Death of Murat Idrissi\n",
-      "16                    The Faculty of Dreams\n",
-      "17                         The Pine Islands\n",
-      "18                            The Remainder\n",
-      "19                   The Shape of the Ruins\n",
-      "20                                The Years\n",
-      "21             The 7th Function of Language\n",
-      "22                         The Dinner Guest\n",
-      "23                      The Flying Mountain\n",
-      "24                             The Impostor\n",
-      "25                       The Stolen Bicycle\n",
-      "26                           The White Book\n",
-      "27                        The World Goes On\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"\\nBooks with 'love' in title:\\n\", df_love_books)\n",
     "\n",
-    "# Query 10: Find books starting with 'The'\n",
-    "df_the_books = pd.read_sql(\"SELECT title FROM books WHERE title LIKE 'The %'\", conn)\n",
-    "print(\"\\nBooks starting with 'The':\\n\", df_the_books)\n"
+    "# # Query 10: Find books starting with 'The'\n",
+    "# df_the_books = pd.read_sql(\"SELECT title FROM books WHERE title LIKE 'The %'\", conn)\n",
+    "# print(\"\\nBooks starting with 'The':\\n\", df_the_books)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +397,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 11: Find books matching uncertain title spelling\n",
     "df_uncertain_book = pd.read_sql(\"SELECT title FROM books WHERE title LIKE 'P_re'\", conn)\n",
     "print(\"\\nBooks matching uncertain spelling:\\n\", df_uncertain_book)\n"
@@ -503,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -511,22 +412,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average rating of all books:\n",
+      "Average rating for books by Fernanda Melchor:\n",
       "    Average Rating\n",
-      "0            3.84\n"
+      "0            3.98\n"
      ]
     }
    ],
    "source": [
+    "# # Query 12: Find average rating of all books\n",
+    "# df_avg_all = pd.read_sql(\"SELECT ROUND(AVG(rating), 2) AS 'Average Rating' FROM ratings\", conn)\n",
+    "# print(\"\\nAverage rating of all books:\\n\", df_avg_all)\n",
     "\n",
-    "# Query 12: Find average rating of all books\n",
-    "df_avg_all = pd.read_sql(\"SELECT ROUND(AVG(rating), 2) AS 'Average Rating' FROM ratings\", conn)\n",
-    "print(\"\\nAverage rating of all books:\\n\", df_avg_all)\n"
+    "# Get the average rating for book authored by Fernanda Melchor\n",
+    "df_avg_melchor = pd.read_sql(\"\"\"\n",
+    "    SELECT ROUND(AVG(rating), 2) AS 'Average Rating' FROM ratings WHERE book_id IN (\n",
+    "        SELECT book_id FROM authored WHERE author_id = (\n",
+    "            SELECT id FROM authors WHERE name = 'Fernanda Melchor'\n",
+    "        )\n",
+    "    )\"\"\", conn)\n",
+    "print(\"\\nAverage rating for books by Fernanda Melchor:\\n\", df_avg_melchor)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +454,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 13: Find maximum and minimum rating\n",
     "df_max_rating = pd.read_sql(\"SELECT MAX(rating) FROM ratings\", conn)\n",
     "df_min_rating = pd.read_sql(\"SELECT MIN(rating) FROM ratings\", conn)\n",
@@ -555,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +478,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 14: Count total votes (pages)\n",
     "df_total_pages = pd.read_sql(\"SELECT SUM(pages) FROM books\", conn)\n",
     "print(\"\\nTotal number of pages:\\n\", df_total_pages)\n"
@@ -578,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +504,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 15: Count total books and translators\n",
     "df_total_books = pd.read_sql(\"SELECT COUNT(*) FROM books\", conn)\n",
     "df_total_translators = pd.read_sql(\"SELECT COUNT(name) FROM translators\", conn)\n",
@@ -607,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -622,19 +528,17 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 16: Count unique publishers\n",
     "df_unique_publishers = pd.read_sql(\"SELECT COUNT(DISTINCT publisher) FROM publishers\", conn)\n",
-    "print(\"\\nTotal unique publishers:\\n\", df_unique_publishers)\n"
+    "print(\"\\nTotal unique publishers:\\n\", df_unique_publishers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Close connection\n",
     "conn.close()\n"
    ]
@@ -648,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +609,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 2: INTERSECT - Finds authors who are also translators\n",
     "df_intersect = pd.read_sql(\"\"\"\n",
     "    SELECT name FROM authors\n",
@@ -717,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +638,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 3: Finds books translated by Sophie Hughes\n",
     "df_sophie_books = pd.read_sql(\"\"\"\n",
     "    SELECT book_id FROM translated WHERE translator_id = (\n",
@@ -747,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -755,26 +657,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Books translated by Margaret Jull Costa:\n",
+      "Books translated by Sophie Hughes:\n",
       "    book_id\n",
       "0       50\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# Query 4: Finds books translated by Margaret Jull Costa\n",
+    "# Query 3: Finds books translated by Sophie Hughes\n",
     "df_margaret_books = pd.read_sql(\"\"\"\n",
     "    SELECT book_id FROM translated WHERE translator_id = (\n",
     "        SELECT id FROM translators WHERE name = 'Margaret Jull Costa'\n",
     "    );\n",
     "\"\"\", conn)\n",
-    "print(\"\\nBooks translated by Margaret Jull Costa:\\n\", df_margaret_books)\n"
+    "print(\"\\nBooks translated by Sophie Hughes:\\n\", df_margaret_books)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +690,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 5: INTERSECT - Finds books translated by both Sophie Hughes and Margaret Jull Costa\n",
     "df_common_books = pd.read_sql(\"\"\"\n",
     "    SELECT book_id FROM translated WHERE translator_id = (\n",
@@ -805,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +720,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 6: Retrieves the titles of books translated by both translators\n",
     "df_common_titles = pd.read_sql(\"\"\"\n",
     "    SELECT title FROM books WHERE id IN (\n",
@@ -936,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +862,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 2: Joins titles with average ratings\n",
     "df_avg_ratings_with_titles = pd.read_sql(\"\"\"\n",
     "    SELECT title, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
@@ -975,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +900,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Query 3: Chooses books with a rating of 4.0 or higher\n",
     "df_high_rated_books = pd.read_sql(\"\"\"\n",
     "    SELECT title, ROUND(AVG(rating), 2) AS \"average rating\" FROM ratings\n",
