--- a/Explorations/SQLite/Parameterised_Queries.ipynb
+++ b/Explorations/SQLite/Parameterised_Queries.ipynb
@@ -126,6 +126,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 2. Using Named Parameters\n",
+    "# database_path = \"Datasets/database/longlist.db\"\n",
+    "# conn = sqlite3.connect(database_path)\n",
+    "# query = \"\"\"\n",
+    "#     SELECT title FROM books \n",
+    "#     WHERE translator_id = :translator AND publisher_id = (\n",
+    "#         SELECT id FROM publishers WHERE publisher = :publisher\n",
+    "#     )\n",
+    "# \"\"\"\n",
+    "\n",
+    "# params = {\"translator\": 5, \"publisher\": \"MacLehose Press\"}\n",
+    "\n",
+    "# df_books = pd.read_sql(query, conn, params=params)\n",
+    "# print(df_books)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   title\n",
+      "0                 Heaven\n",
+      "1  Happy Stories, Mostly\n",
+      "2       Hurricane Season\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_term = \"H%\"  # Matches any title starting with 'Harry'\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT title FROM books \n",
+    "    WHERE title LIKE ?\n",
+    "\"\"\"\n",
+    "\n",
+    "df_books = pd.read_sql(query, conn, params=(search_term,))\n",
+    "print(df_books)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                        title\n",
+      "0  Drive Your Plow Over the Bones of the Dead\n",
+      "1                                 Elena Knows\n",
+      "2               Faces on the Tip of My Tongue\n",
+      "3                                     Flights\n",
+      "4                               Four Soldiers\n",
+      "5                     Frankenstein in Baghdad\n",
+      "6                              Go, Went, Gone\n",
+      "7                       Happy Stories, Mostly\n",
+      "8                                      Heaven\n",
+      "9                            Hurricane Season\n"
+     ]
+    }
+   ],
+   "source": [
+    "page = 2\n",
+    "page_size = 10\n",
+    "offset = (page - 1) * page_size  # Calculate offset dynamically\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT title FROM books \n",
+    "    ORDER BY title \n",
+    "    LIMIT ? OFFSET ?\n",
+    "\"\"\"\n",
+    "\n",
+    "df_books = pd.read_sql(query, conn, params=(page_size, offset))\n",
+    "print(df_books)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
