Preparing sql exploration files

--- a/Explorations/SQLite/Writing/Creating.ipynb
+++ b/Explorations/SQLite/Writing/Creating.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Saving SQLite database tables to CSV\n"
+    "### CSV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving SQLite database tables to CSV\n"
    ]
   },
   {
@@ -48,7 +55,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating a SQLite database from CSV files using Python. The process involves:  \n",
+    "#### Creating a SQLite database from CSV files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The process involves:  \n",
     "\n",
     "1. **Defining the Schema** – Deleting existing tables (if they exist) and creating new ones with appropriate constraints.  \n",
     "2. **Loading CSV Data** – Reading data from CSV files into Pandas DataFrames.  \n",
@@ -57,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +95,7 @@
     "CREATED_CSV = os.path.join(DATA_DIR, 'created.csv')\n",
     "\n",
     "# Define and create database file path\n",
-    "DB_PATH = \"Examples/art_museum.db\"\n",
+    "DB_PATH = \"Outputs/art_museum.db\"\n",
     "\n",
     "# Connect to SQLite database\n",
     "conn = sqlite3.connect(DB_PATH)\n",
@@ -142,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +192,7 @@
     "import sqlite3\n",
     "\n",
     "# Define database path\n",
-    "DB_PATH = \"Examples/art_museum.db\"\n",
+    "DB_PATH = \"Outputs/art_museum.db\"\n",
     "\n",
     "# Connect to the database\n",
     "conn = sqlite3.connect(DB_PATH)\n",
@@ -204,12 +219,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load data from an spreadsheet to a database."
+    "#### Load data from an xlsx spreadsheet to a database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +242,7 @@
     "\n",
     "# Define file paths\n",
     "EXCEL_FILE = \"../Datasets/excel/mfa.xlsx\"\n",
-    "DB_PATH = \"Examples/art_museum_excel.db\"\n",
+    "DB_PATH = \"Outputs/art_museum_excel.db\"\n",
     "\n",
     "# Connect to SQLite database\n",
     "conn = sqlite3.connect(DB_PATH)\n",
@@ -288,7 +303,7 @@
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")\n",
     "    conn.rollback()\n",
-    "\n",
+    "#todo\n",
     "finally:\n",
     "    conn.close()\n"
    ]
@@ -299,8 +314,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put schema in a text file"
+    "# put schema in a text file #todo\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
