--- a/Explorations/SQLite/ER_Diagrams.ipynb
+++ b/Explorations/SQLite/ER_Diagrams.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "\n",
     "# Connect to SQLite database\n",
-    "database_path=\"Datasets/database/longlist.db\"\n",
+    "database_path=\"Datasets/database/Chinook_Sqlite.sqlite\"\n",
     "conn = sqlite3.connect(database_path)\n",
     "\n",
     "# Create a cursor object\n",
@@ -43,9 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mProgrammingError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m mermaid_output = [\u001b[33m\"\u001b[39m\u001b[33merDiagram\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Get list of tables\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mcursor\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSELECT name FROM sqlite_master WHERE type=\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtable\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m;\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m tables = [table[\u001b[32m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m table \u001b[38;5;129;01min\u001b[39;00m cursor.fetchall()]\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m table \u001b[38;5;129;01min\u001b[39;00m tables:\n\u001b[32m      9\u001b[39m     \u001b[38;5;66;03m# Get column details\u001b[39;00m\n",
+      "\u001b[31mProgrammingError\u001b[39m: Cannot operate on a closed database."
+     ]
+    }
+   ],
    "source": [
     "# Start Mermaid diagram\n",
     "mermaid_output = [\"erDiagram\"]\n",
@@ -95,10 +107,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "```mermaid\n",
+    "erDiagram\n",
+    "  Album {\n",
+    "    INTEGER AlbumId PK\n",
+    "    NVARCHAR(160) Title\n",
+    "    INTEGER ArtistId\n",
+    "  }\n",
+    "  Album ||--o{ Artist : \"ArtistId → ArtistId\"\n",
+    "\n",
+    "  Artist {\n",
+    "    INTEGER ArtistId PK\n",
+    "    NVARCHAR(120) Name\n",
+    "  }\n",
+    "\n",
+    "  Customer {\n",
+    "    INTEGER CustomerId PK\n",
+    "    NVARCHAR(40) FirstName\n",
+    "    NVARCHAR(20) LastName\n",
+    "    NVARCHAR(80) Company\n",
+    "    NVARCHAR(70) Address\n",
+    "    NVARCHAR(40) City\n",
+    "    NVARCHAR(40) State\n",
+    "    NVARCHAR(40) Country\n",
+    "    NVARCHAR(10) PostalCode\n",
+    "    NVARCHAR(24) Phone\n",
+    "    NVARCHAR(24) Fax\n",
+    "    NVARCHAR(60) Email\n",
+    "    INTEGER SupportRepId\n",
+    "  }\n",
+    "  Customer ||--o{ Employee : \"SupportRepId → EmployeeId\"\n",
+    "\n",
+    "  Employee {\n",
+    "    INTEGER EmployeeId PK\n",
+    "    NVARCHAR(20) LastName\n",
+    "    NVARCHAR(20) FirstName\n",
+    "    NVARCHAR(30) Title\n",
+    "    INTEGER ReportsTo\n",
+    "    DATETIME BirthDate\n",
+    "    DATETIME HireDate\n",
+    "    NVARCHAR(70) Address\n",
+    "    NVARCHAR(40) City\n",
+    "    NVARCHAR(40) State\n",
+    "    NVARCHAR(40) Country\n",
+    "    NVARCHAR(10) PostalCode\n",
+    "    NVARCHAR(24) Phone\n",
+    "    NVARCHAR(24) Fax\n",
+    "    NVARCHAR(60) Email\n",
+    "  }\n",
+    "  Employee ||--o{ Employee : \"ReportsTo → EmployeeId\"\n",
+    "\n",
+    "  Genre {\n",
+    "    INTEGER GenreId PK\n",
+    "    NVARCHAR(120) Name\n",
+    "  }\n",
+    "\n",
+    "  Invoice {\n",
+    "    INTEGER InvoiceId PK\n",
+    "    INTEGER CustomerId\n",
+    "    DATETIME InvoiceDate\n",
+    "    NVARCHAR(70) BillingAddress\n",
+    "    NVARCHAR(40) BillingCity\n",
+    "    NVARCHAR(40) BillingState\n",
+    "    NVARCHAR(40) BillingCountry\n",
+    "    NVARCHAR(10) BillingPostalCode\n",
+    "    FLOAT Total\n",
+    "  }\n",
+    "  Invoice ||--o{ Customer : \"CustomerId → CustomerId\"\n",
+    "\n",
+    "  InvoiceLine {\n",
+    "    INTEGER InvoiceLineId PK\n",
+    "    INTEGER InvoiceId\n",
+    "    INTEGER TrackId\n",
+    "    FLOAT UnitPrice\n",
+    "    INTEGER Quantity\n",
+    "  }\n",
+    "  InvoiceLine ||--o{ Track : \"TrackId → TrackId\"\n",
+    "  InvoiceLine ||--o{ Invoice : \"InvoiceId → InvoiceId\"\n",
+    "\n",
+    "  MediaType {\n",
+    "    INTEGER MediaTypeId PK\n",
+    "    NVARCHAR(120) Name\n",
+    "  }\n",
+    "\n",
+    "  Playlist {\n",
+    "    INTEGER PlaylistId PK\n",
+    "    NVARCHAR(120) Name\n",
+    "  }\n",
+    "\n",
+    "  PlaylistTrack {\n",
+    "    INTEGER PlaylistId PK\n",
+    "    INTEGER TrackId PK\n",
+    "  }\n",
+    "  PlaylistTrack ||--o{ Track : \"TrackId → TrackId\"\n",
+    "  PlaylistTrack ||--|| Playlist : \"PlaylistId → PlaylistId\"\n",
+    "\n",
+    "  Track {\n",
+    "    INTEGER TrackId PK\n",
+    "    NVARCHAR(200) Name\n",
+    "    INTEGER AlbumId\n",
+    "    INTEGER MediaTypeId\n",
+    "    INTEGER GenreId\n",
+    "    NVARCHAR(220) Composer\n",
+    "    INTEGER Milliseconds\n",
+    "    INTEGER Bytes\n",
+    "    FLOAT UnitPrice\n",
+    "  }\n",
+    "  Track ||--o{ MediaType : \"MediaTypeId → MediaTypeId\"\n",
+    "  Track ||--o{ Genre : \"GenreId → GenreId\"\n",
+    "  Track ||--o{ Album : \"AlbumId → AlbumId\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
